frontend/main/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-frontend-deployment
  labels:
    app: main-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-frontend
  template:
    metadata:
      labels:
        app: main-frontend
    spec:
      containers:
      - name: main-frontend
        image: 533267327181.dkr.ecr.us-east-1.amazonaws.com/shopping-site-main:fc48cfde900d9fde26707d30d35594fbd65c51e3
        ports:
        - containerPort: 80
