frontend/main/service.yml
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: google
  labels:
    app: main-frontend
spec:
  type: ClusterIP
  selector:
    app: main-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
